small home page tweak but fixing backend things and stuck right now

--- a/src/app/components/home-components/home/home.component.scss
+++ b/src/app/components/home-components/home/home.component.scss
@@ -5,15 +5,20 @@
 .about-heading{
     font-size: 23px;
     font-weight: 700;
-    margin:0;
+
 }
 
 .about-headingtwo{
     font-size: 18px;
     font-weight: 500;
-    margin:0;
+
 }
 
 .subhead{
-    margin-top: 10px;
+
+}
+
+@media only screen and (min-width: 768px){
+
+
 }
